// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The form components as a form should render and change accordingly 1`] = `
<form
  class="rfe-form"
  name="testForm"
>
  <fieldset>
    <legend>
      My Form
    </legend>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-1-1"
      >
        My Label
      </label>
      <input
        id="id-1-1"
        name="myTextBox"
        type="text"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-2-1"
      >
        My Checkbox
      </label>
      <input
        id="id-2-1"
        name="myCheckBox"
        type="checkbox"
        value="checkbox value"
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-3-1"
      >
        My Radio
      </label>
      <input
        id="id-3-1"
        name="myRadio"
        type="radio"
        value="myRadio1"
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-4-1"
      >
        My Date
      </label>
      <input
        id="id-4-1"
        name="myDate"
        type="date"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-5-1"
      >
        My Range
      </label>
      <input
        id="id-5-1"
        max="100"
        min="0"
        step="1"
        type="range"
        value="50"
      />
      <span>
        50
      </span>
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-6-1"
      >
        Telephone
      </label>
      <input
        id="id-6-1"
        name="myTelephone"
        type="tel"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-7-1"
      >
        My DateTime
      </label>
      <input
        id="id-7-1"
        name="myDateTime"
        type="datetime"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-8-1"
      >
        My Month
      </label>
      <input
        id="id-8-1"
        name="myMonth"
        type="month"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-9-1"
      >
        My Week
      </label>
      <input
        id="id-9-1"
        name="myWeek"
        type="week"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-10-1"
      >
        My DateTime
      </label>
      <input
        id="id-10-1"
        name="myDateTimeLocal"
        type="datetime-local"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-11-1"
      >
        My Time
      </label>
      <input
        id="id-11-1"
        name="myTime"
        type="time"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-12-1"
      >
        My Drop Down
      </label>
      <select
        data-testid="dd1"
        id="id-12-1"
      >
        <optgroup
          label="First Group"
        >
          <option
            value="1"
          >
            First
          </option>
          <option
            value="2"
          >
            Second
          </option>
          <option
            value="3"
          >
            Third
          </option>
        </optgroup>
        <optgroup
          label="Second Group"
        >
          <option
            value="11"
          >
            Second First
          </option>
          <option
            value="12"
          >
            Second Second
          </option>
          <option
            value="13"
          >
            Second Third
          </option>
        </optgroup>
        <optgroup
          label="Third Group"
        >
          <option
            value="21"
          >
            Third First
          </option>
          <option
            value="22"
          >
            Third Second
          </option>
          <option
            value="23"
          >
            Third Third
          </option>
        </optgroup>
      </select>
    </div>
    <button>
      Save
    </button>
  </fieldset>
</form>
`;

exports[`The form components as a form should render and change accordingly 2`] = `
Object {
  "myCheckBox": null,
  "myDate": "",
  "myDateTime": "",
  "myDateTimeLocal": "",
  "myDropDown": "22",
  "myMonth": "",
  "myRadio": null,
  "myRange": "50",
  "myTelephone": "",
  "myTextBox": "Changed Value",
  "myTime": "",
  "myWeek": "",
}
`;

exports[`The form components as a form should render the second 1`] = `
<form
  class="rfe-form"
  name="testForm"
>
  <fieldset>
    <legend>
      My Form
    </legend>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-15-1"
      >
        My Label
      </label>
      <input
        id="id-15-1"
        name="myTextBox"
        type="text"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-16-1"
      >
        My Checkbox
      </label>
      <input
        id="id-16-1"
        name="myCheckBox"
        type="checkbox"
        value="checkbox value"
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-17-1"
      >
        My Radio
      </label>
      <input
        id="id-17-1"
        name="myRadio"
        type="radio"
        value="myRadio1"
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-18-1"
      >
        My Date
      </label>
      <input
        id="id-18-1"
        name="myDate"
        type="date"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-19-1"
      >
        My Range
      </label>
      <input
        id="id-19-1"
        max="100"
        min="0"
        step="1"
        type="range"
        value="50"
      />
      <span>
        50
      </span>
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-20-1"
      >
        Telephone
      </label>
      <input
        id="id-20-1"
        name="myTelephone"
        type="tel"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-21-1"
      >
        My DateTime
      </label>
      <input
        id="id-21-1"
        name="myDateTime"
        type="datetime"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-22-1"
      >
        My Month
      </label>
      <input
        id="id-22-1"
        name="myMonth"
        type="month"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-23-1"
      >
        My Week
      </label>
      <input
        id="id-23-1"
        name="myWeek"
        type="week"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-24-1"
      >
        My DateTime
      </label>
      <input
        id="id-24-1"
        name="myDateTimeLocal"
        type="datetime-local"
        value=""
      />
    </div>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-25-1"
      >
        My Time
      </label>
      <input
        id="id-25-1"
        name="myTime"
        type="time"
        value=""
      />
    </div>
  </fieldset>
  <fieldset>
    <legend>
      My Form part 2
    </legend>
    <div
      class="rfe-form__row"
    >
      <label
        for="id-26-1"
      >
        My Drop Down
      </label>
      <select
        data-testid="dd1"
        id="id-26-1"
      >
        <optgroup
          label="First Group"
        >
          <option
            value="1"
          >
            First
          </option>
          <option
            value="2"
          >
            Second
          </option>
          <option
            value="3"
          >
            Third
          </option>
        </optgroup>
        <optgroup
          label="Second Group"
        >
          <option
            value="11"
          >
            Second First
          </option>
          <option
            value="12"
          >
            Second Second
          </option>
          <option
            value="13"
          >
            Second Third
          </option>
        </optgroup>
        <optgroup
          label="Third Group"
        >
          <option
            value="21"
          >
            Third First
          </option>
          <option
            value="22"
          >
            Third Second
          </option>
          <option
            value="23"
          >
            Third Third
          </option>
        </optgroup>
      </select>
    </div>
    <button>
      Save
    </button>
  </fieldset>
</form>
`;

exports[`The form components as a form should render the second 2`] = `
Object {
  "myCheckBox": null,
  "myDate": "",
  "myDateTime": "",
  "myDateTimeLocal": "",
  "myDropDown": "2",
  "myMonth": "",
  "myRadio": null,
  "myRange": "50",
  "myTelephone": "",
  "myTextBox": "",
  "myTime": "",
  "myWeek": "",
}
`;
